# digital_twin

./: .gitignore  CONTRIBUTING.md  PROGRESS.md  README.md
docs/: 01_background.md  02_problem_statement.md  03_literature_review.md  04_research_theme.md  05_oct_framework.md  06_simulation_vs_retrieval.md  07_prototype_experiment.md  08_research_pivot.md  09_ablation_plan.md
experiments/: README.md
experiments/ablation_multi_explore/: results.md
experiments/ablation_t021/: ablation_summary.json  results.md
experiments/ablation_t022/: ablation_summary.json  results.md
experiments/ablation_t023/: ablation_summary.json  results.md
experiments/runtime/: .env.example  README.md  pyproject.toml  requirements.txt
experiments/runtime/oct/: __init__.py  agent.py  environment.py  llm.py  rules.py  runner.py
experiments/runtime/oct/agents/: __init__.py  rb_min.py
experiments/runtime/oct/dispatchers/: __init__.py  purchase.py
experiments/runtime/oct/personas/: __init__.py  accountant_d.py  approver_c.py  buyer_a.py  buyer_b.py  vendor_e.py
experiments/runtime/scripts/: README_exp003b.md  aggregate_ablation.py  analyze_trace.py  demo_buyer_a.py  demo_five_agents.py  run_ablation.py  run_exp002.py  run_exp003.py  run_exp003b.py  run_exp003c.py  run_exp004.py  run_exp005.py  run_layer3.py  run_mode_r.py  run_multi_seed.py
experiments/runtime/tests/: test_agent.py  test_demand.py  test_environment.py  test_llm.py  test_personas_multi.py  test_rb_min.py  test_rules.py  test_runner.py  test_t028_ambiguity.py  test_t029_multi_explore.py
(+517 files in other folders)
