[project]
name = "oct-runtime"
version = "0.1.0"
description = "Organizational Causal Twin simulation runtime (purchase-approval prototype)"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "anthropic==0.94.0",
    "openai==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
